<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView android:text="@string/about_tata_title" android:layout_width="wrap_content"
        android:id="@+id/about_title"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp" />

    <TextView android:text="@string/about_tata_intro" android:layout_width="wrap_content"
        android:id="@+id/about_intro"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_title"
        android:layout_margin="15dp" />

    <TextView android:text="@string/about_tata_info" android:layout_width="wrap_content"
        android:id="@+id/about_info"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_intro"
        android:layout_margin="15dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_info"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:id="@+id/about_regards">

    <TextView android:text="@string/about_tata_regards" android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView android:text="@string/about_tata_myname" android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/about_licenses"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_tata_licenses"
        android:layout_margin="15dp"
        android:layout_below="@id/about_regards"/>

</RelativeLayout>

</ScrollView>